--- a/part3/Phonebook_Backend/package.json
+++ b/part3/Phonebook_Backend/package.json
@@ -8,10 +8,11 @@
   "scripts": {
     "start": "node index.js",
     "dev": "node --watch index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:ui": "rm -rf dist && cd ../../part2/ex2.6-Phonebook && npm run build && cp -r dist ../../part3/Phonebook_Backend",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^5.1.0",
     "morgan": "^1.10.1"
   }
