--- a/part3/lesson-a/package.json
+++ b/part3/lesson-a/package.json
@@ -9,6 +9,7 @@
     "start": "node index.js",
     "dev": "node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
     "build:ui": "rm -rf dist && cd ../../part2/lesson-b && npm run build && cp -r dist ../../part3/lesson-a",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
@@ -16,5 +17,11 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.20.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@stylistic/eslint-plugin": "^5.6.1",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0"
   }
 }
