--- a/part3/Phonebook_Backend/package.json
+++ b/part3/Phonebook_Backend/package.json
@@ -9,6 +9,7 @@
     "start": "node index.js",
     "dev": "node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
     "build:ui": "rm -rf dist && cd ../../part2/ex2.6-Phonebook && npm run build && cp -r dist ../../part3/Phonebook_Backend",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
@@ -17,5 +18,11 @@
     "express": "^5.1.0",
     "mongoose": "^8.20.0",
     "morgan": "^1.10.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.39.1",
+    "@stylistic/eslint-plugin": "^5.6.1",
+    "eslint": "^9.39.1",
+    "globals": "^16.5.0"
   }
 }
