--- a/BlogList/package.json
+++ b/BlogList/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "node --watch index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node --test",
     "lint": "eslint .",
     "build:ui": "rm -rf dist && cd ../../part2/ex2.6-Phonebook && npm run build && cp -r dist ../../part3/Phonebook_Backend",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
