--- a/BlogList/package.json
+++ b/BlogList/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development node --watch index.js",
-    "test": "cross-env  NODE_ENV=test node --test",
+    "test": "cross-env  NODE_ENV=test node --test --test-concurrency=1",
     "lint": "eslint .",
     "build:ui": "rm -rf dist && cd ../../part2/ex2.6-Phonebook && npm run build && cp -r dist ../../part3/Phonebook_Backend",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
