--- a/query-notes/package.json
+++ b/query-notes/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.11",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
